--- a/src/htmltests/QunitTest.html
+++ b/src/htmltests/QunitTest.html
@@ -55,6 +55,14 @@
 <script type="text/javascript" src="../api/options.js"></script>
 <script type="text/javascript" src="../api/sgf_options.js"></script>
 <script type="text/javascript" src="../api/stone_actions.js"></script>
+<!-- ../api/widgetopt sources -->
+<script type="text/javascript" src="../api/widgetopt/widgetopt.js"></script>
+<script type="text/javascript" src="../api/widgetopt/board_editor.js"></script>
+<script type="text/javascript" src="../api/widgetopt/correct_variations_problem.js"></script>
+<script type="text/javascript" src="../api/widgetopt/example_options.js"></script>
+<script type="text/javascript" src="../api/widgetopt/game_viewer.js"></script>
+<script type="text/javascript" src="../api/widgetopt/reduced_game_viewer.js"></script>
+<script type="text/javascript" src="../api/widgetopt/standard_problem.js"></script>
 <!-- ../controllers sources -->
 <script type="text/javascript" src="../controllers/controllers.js"></script>
 <script type="text/javascript" src="../controllers/base.js"></script>
@@ -70,6 +78,42 @@
 <script type="text/javascript" src="../displays/ids.js"></script>
 <script type="text/javascript" src="../displays/line_box.js"></script>
 <script type="text/javascript" src="../displays/resized_box.js"></script>
+<!-- ../displays/board sources -->
+<script type="text/javascript" src="../displays/board/board.js"></script>
+<script type="text/javascript" src="../displays/board/board_base.js"></script>
+<script type="text/javascript" src="../displays/board/board_labels.js"></script>
+<script type="text/javascript" src="../displays/board/buttons.js"></script>
+<script type="text/javascript" src="../displays/board/intersections.js"></script>
+<script type="text/javascript" src="../displays/board/lines.js"></script>
+<script type="text/javascript" src="../displays/board/marks.js"></script>
+<script type="text/javascript" src="../displays/board/starpoints.js"></script>
+<script type="text/javascript" src="../displays/board/stones.js"></script>
+<!-- ../displays/commentbox sources -->
+<script type="text/javascript" src="../displays/commentbox/commentbox.js"></script>
+<script type="text/javascript" src="../displays/commentbox/create.js"></script>
+<!-- ../displays/gui sources -->
+<script type="text/javascript" src="../displays/gui/gui.js"></script>
+<script type="text/javascript" src="../displays/gui/center.js"></script>
+<!-- ../displays/icons sources -->
+<script type="text/javascript" src="../displays/icons/icons.js"></script>
+<script type="text/javascript" src="../displays/icons/bar.js"></script>
+<script type="text/javascript" src="../displays/icons/icon_centering.js"></script>
+<script type="text/javascript" src="../displays/icons/icon_selector.js"></script>
+<script type="text/javascript" src="../displays/icons/svg.js"></script>
+<script type="text/javascript" src="../displays/icons/wrapped_icon.js"></script>
+<!-- ../displays/position sources -->
+<script type="text/javascript" src="../displays/position/position.js"></script>
+<script type="text/javascript" src="../displays/position/widget_boxes.js"></script>
+<script type="text/javascript" src="../displays/position/widget_positioner.js"></script>
+<!-- ../displays/statusbar sources -->
+<script type="text/javascript" src="../displays/statusbar/statusbar.js"></script>
+<script type="text/javascript" src="../displays/statusbar/fullscreen.js"></script>
+<script type="text/javascript" src="../displays/statusbar/gameinfo.js"></script>
+<script type="text/javascript" src="../displays/statusbar/info_window.js"></script>
+<!-- ../displays/svg sources -->
+<script type="text/javascript" src="../displays/svg/svg.js"></script>
+<script type="text/javascript" src="../displays/svg/pathutils.js"></script>
+<script type="text/javascript" src="../displays/svg/svgobj.js"></script>
 <!-- ../dom sources -->
 <script type="text/javascript" src="../dom/dom.js"></script>
 <script type="text/javascript" src="../dom/error.js"></script>
@@ -124,93 +168,49 @@
 <script type="text/javascript" src="../widgets/widgets.js"></script>
 <script type="text/javascript" src="../widgets/base_widget.js"></script>
 <script type="text/javascript" src="../widgets/manager.js"></script>
-<!-- ../api/widgetopt sources -->
-<script type="text/javascript" src="../api/widgetopt/widgetopt.js"></script>
-<script type="text/javascript" src="../api/widgetopt/board_editor.js"></script>
-<script type="text/javascript" src="../api/widgetopt/correct_variations_problem.js"></script>
-<script type="text/javascript" src="../api/widgetopt/example_options.js"></script>
-<script type="text/javascript" src="../api/widgetopt/game_viewer.js"></script>
-<script type="text/javascript" src="../api/widgetopt/reduced_game_viewer.js"></script>
-<script type="text/javascript" src="../api/widgetopt/standard_problem.js"></script>
-<!-- ../displays/board sources -->
-<script type="text/javascript" src="../displays/board/board.js"></script>
-<script type="text/javascript" src="../displays/board/board_base.js"></script>
-<script type="text/javascript" src="../displays/board/board_labels.js"></script>
-<script type="text/javascript" src="../displays/board/buttons.js"></script>
-<script type="text/javascript" src="../displays/board/intersections.js"></script>
-<script type="text/javascript" src="../displays/board/lines.js"></script>
-<script type="text/javascript" src="../displays/board/marks.js"></script>
-<script type="text/javascript" src="../displays/board/starpoints.js"></script>
-<script type="text/javascript" src="../displays/board/stones.js"></script>
-<!-- ../displays/commentbox sources -->
-<script type="text/javascript" src="../displays/commentbox/commentbox.js"></script>
-<script type="text/javascript" src="../displays/commentbox/create.js"></script>
-<!-- ../displays/gui sources -->
-<script type="text/javascript" src="../displays/gui/gui.js"></script>
-<script type="text/javascript" src="../displays/gui/center.js"></script>
-<!-- ../displays/icons sources -->
-<script type="text/javascript" src="../displays/icons/icons.js"></script>
-<script type="text/javascript" src="../displays/icons/bar.js"></script>
-<script type="text/javascript" src="../displays/icons/icon_centering.js"></script>
-<script type="text/javascript" src="../displays/icons/icon_selector.js"></script>
-<script type="text/javascript" src="../displays/icons/svg.js"></script>
-<script type="text/javascript" src="../displays/icons/wrapped_icon.js"></script>
-<!-- ../displays/position sources -->
-<script type="text/javascript" src="../displays/position/position.js"></script>
-<script type="text/javascript" src="../displays/position/widget_boxes.js"></script>
-<script type="text/javascript" src="../displays/position/widget_positioner.js"></script>
-<!-- ../displays/statusbar sources -->
-<script type="text/javascript" src="../displays/statusbar/statusbar.js"></script>
-<script type="text/javascript" src="../displays/statusbar/fullscreen.js"></script>
-<script type="text/javascript" src="../displays/statusbar/gameinfo.js"></script>
-<script type="text/javascript" src="../displays/statusbar/info_window.js"></script>
-<!-- ../displays/svg sources -->
-<script type="text/javascript" src="../displays/svg/svg.js"></script>
-<script type="text/javascript" src="../displays/svg/pathutils.js"></script>
-<script type="text/javascript" src="../displays/svg/svgobj.js"></script>
 <!-- END-AUTO-GEN-DEPS -->
 
 <!-- AUTO-GEN-TESTS -->
-<!-- src tests -->
+<!-- .. tests -->
 <script type="text/javascript" src="../glift_test.js"></script>
-<!-- api tests -->
+<!-- ../api tests -->
 <script type="text/javascript" src="../api/api_test.js"></script>
 <script type="text/javascript" src="../api/options_processing_test.js"></script>
 <script type="text/javascript" src="../api/sgf_options_test.js"></script>
-<!-- controllers tests -->
+<!-- ../controllers tests -->
 <script type="text/javascript" src="../controllers/base_test.js"></script>
 <script type="text/javascript" src="../controllers/board_editor_test.js"></script>
 <script type="text/javascript" src="../controllers/controllers_test.js"></script>
 <script type="text/javascript" src="../controllers/game_viewer_test.js"></script>
 <script type="text/javascript" src="../controllers/static_problem_test.js"></script>
-<!-- displays tests -->
+<!-- ../displays tests -->
 <script type="text/javascript" src="../displays/board_points_test.js"></script>
 <script type="text/javascript" src="../displays/cropbox_wrapper_test.js"></script>
 <script type="text/javascript" src="../displays/environment_test.js"></script>
 <script type="text/javascript" src="../displays/ids_test.js"></script>
 <script type="text/javascript" src="../displays/resized_box_test.js"></script>
-<!-- dom tests -->
-<script type="text/javascript" src="../dom/sanitize_test.js"></script>
-<!-- flattener tests -->
+<!-- ../flattener tests -->
 <script type="text/javascript" src="../flattener/board_test.js"></script>
 <script type="text/javascript" src="../flattener/flattener_test.js"></script>
 <script type="text/javascript" src="../flattener/intersection_test.js"></script>
 <script type="text/javascript" src="../flattener/labels_test.js"></script>
 <script type="text/javascript" src="../flattener/symbols_test.js"></script>
-<!-- markdown tests -->
+<!-- ../dom tests -->
+<script type="text/javascript" src="../dom/sanitize_test.js"></script>
+<!-- ../markdown tests -->
 <script type="text/javascript" src="../markdown/markdown_test.js"></script>
-<!-- orientation tests -->
+<!-- ../orientation tests -->
 <script type="text/javascript" src="../orientation/bbox_test.js"></script>
 <script type="text/javascript" src="../orientation/cropbox_test.js"></script>
 <script type="text/javascript" src="../orientation/cropping_test.js"></script>
 <script type="text/javascript" src="../orientation/min_bbox_test.js"></script>
 <script type="text/javascript" src="../orientation/rotate_test.js"></script>
-<!-- parse tests -->
+<!-- ../parse tests -->
 <script type="text/javascript" src="../parse/pandanet_test.js"></script>
 <script type="text/javascript" src="../parse/parse_test.js"></script>
 <script type="text/javascript" src="../parse/sgf_parsing_test.js"></script>
 <script type="text/javascript" src="../parse/tygem_test.js"></script>
-<!-- rules tests -->
+<!-- ../rules tests -->
 <script type="text/javascript" src="../rules/autonumber_test.js"></script>
 <script type="text/javascript" src="../rules/goban_test.js"></script>
 <script type="text/javascript" src="../rules/movenode_test.js"></script>
@@ -219,29 +219,29 @@
 <script type="text/javascript" src="../rules/properties_test.js"></script>
 <script type="text/javascript" src="../rules/treepath_nextmoves_test.js"></script>
 <script type="text/javascript" src="../rules/treepath_test.js"></script>
-<!-- sgf tests -->
+<!-- ../sgf tests -->
 <script type="text/javascript" src="../sgf/sgf_test.js"></script>
-<!-- themes tests -->
+<!-- ../themes tests -->
 <script type="text/javascript" src="../themes/themes_test.js"></script>
-<!-- util tests -->
+<!-- ../util tests -->
 <script type="text/javascript" src="../util/array_test.js"></script>
 <script type="text/javascript" src="../util/enums_test.js"></script>
 <script type="text/javascript" src="../util/key_mappings_test.js"></script>
 <script type="text/javascript" src="../util/obj_test.js"></script>
 <script type="text/javascript" src="../util/point_test.js"></script>
 <script type="text/javascript" src="../util/util_test.js"></script>
-<!-- widgets tests -->
+<!-- ../widgets tests -->
 <script type="text/javascript" src="../widgets/base_widget_test.js"></script>
-<!-- widgetopt tests -->
+<!-- ../api/widgetopt tests -->
 <script type="text/javascript" src="../api/widgetopt/widgetopt_test.js"></script>
-<!-- gui tests -->
+<!-- ../displays/gui tests -->
 <script type="text/javascript" src="../displays/gui/center_test.js"></script>
-<!-- icons tests -->
+<!-- ../displays/icons tests -->
 <script type="text/javascript" src="../displays/icons/wrapped_icon_test.js"></script>
-<!-- position tests -->
+<!-- ../displays/position tests -->
 <script type="text/javascript" src="../displays/position/widget_boxes_test.js"></script>
 <script type="text/javascript" src="../displays/position/widget_positioner_test.js"></script>
-<!-- svg tests -->
+<!-- ../displays/svg tests -->
 <script type="text/javascript" src="../displays/svg/pathutils_test.js"></script>
 <script type="text/javascript" src="../displays/svg/svgobj_test.js"></script>
 <!-- END-AUTO-GEN-TESTS -->
