--- a/src/htmltests/QunitTest.html
+++ b/src/htmltests/QunitTest.html
@@ -239,6 +239,7 @@
 <script type="text/javascript" src="../util/array_test.js"></script>
 <script type="text/javascript" src="../util/enums_test.js"></script>
 <script type="text/javascript" src="../util/key_mappings_test.js"></script>
+<script type="text/javascript" src="../util/math_test.js"></script>
 <script type="text/javascript" src="../util/obj_test.js"></script>
 <script type="text/javascript" src="../util/point_test.js"></script>
 <script type="text/javascript" src="../util/util_test.js"></script>
