--- a/src/htmltests/BboxFinder.html
+++ b/src/htmltests/BboxFinder.html
@@ -1,168 +1,29 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
 
-<title> BBoxFinder </title>
-<script type="text/javascript" src="../testdata/sgfs.js"></script>
-<script type="text/javascript" src="../libs/raphael-min.js"></script>
+    <title> BBoxFinder </title>
+    <script type="text/javascript" src="../testdata/sgfs.js"></script>
+    <script type="text/javascript" src="../libs/raphael-min.js"></script>
 
-<!-- AUTO-GEN-DEPS -->
-<!-- .. sources -->
-<script type="text/javascript" src="../glift.js"></script>
-<script type="text/javascript" src="../global.js"></script>
-<script type="text/javascript" src="../init.js"></script>
-<!-- ../util sources -->
-<script type="text/javascript" src="../util/util.js"></script>
-<script type="text/javascript" src="../util/array.js"></script>
-<script type="text/javascript" src="../util/colors.js"></script>
-<script type="text/javascript" src="../util/enums.js"></script>
-<script type="text/javascript" src="../util/errors.js"></script>
-<script type="text/javascript" src="../util/id_generator.js"></script>
-<script type="text/javascript" src="../util/key_mappings.js"></script>
-<script type="text/javascript" src="../util/math.js"></script>
-<script type="text/javascript" src="../util/obj.js"></script>
-<script type="text/javascript" src="../util/performance.js"></script>
-<script type="text/javascript" src="../util/platform.js"></script>
-<script type="text/javascript" src="../util/point.js"></script>
-<script type="text/javascript" src="../util/regions.js"></script>
-<!-- ../controllers sources -->
-<script type="text/javascript" src="../controllers/controllers.js"></script>
-<script type="text/javascript" src="../controllers/base.js"></script>
-<script type="text/javascript" src="../controllers/board_editor.js"></script>
-<script type="text/javascript" src="../controllers/game_figure.js"></script>
-<script type="text/javascript" src="../controllers/game_viewer.js"></script>
-<script type="text/javascript" src="../controllers/static_problem.js"></script>
-<!-- ../ajax sources -->
-<script type="text/javascript" src="../ajax/ajax.js"></script>
-<!-- ../api sources -->
-<script type="text/javascript" src="../api/api.js"></script>
-<script type="text/javascript" src="../api/display_options.js"></script>
-<script type="text/javascript" src="../api/hooks.js"></script>
-<script type="text/javascript" src="../api/icon_actions.js"></script>
-<script type="text/javascript" src="../api/options.js"></script>
-<script type="text/javascript" src="../api/sgf_options.js"></script>
-<script type="text/javascript" src="../api/stone_actions.js"></script>
-<!-- ../api/widgetopt sources -->
-<script type="text/javascript" src="../api/widgetopt/widgetopt.js"></script>
-<script type="text/javascript" src="../api/widgetopt/board_editor.js"></script>
-<script type="text/javascript" src="../api/widgetopt/correct_variations_problem.js"></script>
-<script type="text/javascript" src="../api/widgetopt/example_options.js"></script>
-<script type="text/javascript" src="../api/widgetopt/game_viewer.js"></script>
-<script type="text/javascript" src="../api/widgetopt/reduced_game_viewer.js"></script>
-<script type="text/javascript" src="../api/widgetopt/standard_problem.js"></script>
-<!-- ../displays sources -->
-<script type="text/javascript" src="../displays/displays.js"></script>
-<script type="text/javascript" src="../displays/board_points.js"></script>
-<script type="text/javascript" src="../displays/cropbox_wrapper.js"></script>
-<script type="text/javascript" src="../displays/environment.js"></script>
-<script type="text/javascript" src="../displays/ids.js"></script>
-<script type="text/javascript" src="../displays/line_box.js"></script>
-<script type="text/javascript" src="../displays/resized_box.js"></script>
-<!-- ../displays/board sources -->
-<script type="text/javascript" src="../displays/board/board.js"></script>
-<script type="text/javascript" src="../displays/board/board_base.js"></script>
-<script type="text/javascript" src="../displays/board/board_labels.js"></script>
-<script type="text/javascript" src="../displays/board/buttons.js"></script>
-<script type="text/javascript" src="../displays/board/intersections.js"></script>
-<script type="text/javascript" src="../displays/board/lines.js"></script>
-<script type="text/javascript" src="../displays/board/marks.js"></script>
-<script type="text/javascript" src="../displays/board/starpoints.js"></script>
-<script type="text/javascript" src="../displays/board/stones.js"></script>
-<!-- ../displays/commentbox sources -->
-<script type="text/javascript" src="../displays/commentbox/commentbox.js"></script>
-<script type="text/javascript" src="../displays/commentbox/create.js"></script>
-<!-- ../displays/gui sources -->
-<script type="text/javascript" src="../displays/gui/gui.js"></script>
-<script type="text/javascript" src="../displays/gui/center.js"></script>
-<!-- ../displays/icons sources -->
-<script type="text/javascript" src="../displays/icons/icons.js"></script>
-<script type="text/javascript" src="../displays/icons/bar.js"></script>
-<script type="text/javascript" src="../displays/icons/icon_centering.js"></script>
-<script type="text/javascript" src="../displays/icons/icon_selector.js"></script>
-<script type="text/javascript" src="../displays/icons/svg.js"></script>
-<script type="text/javascript" src="../displays/icons/wrapped_icon.js"></script>
-<!-- ../displays/position sources -->
-<script type="text/javascript" src="../displays/position/position.js"></script>
-<script type="text/javascript" src="../displays/position/widget_boxes.js"></script>
-<script type="text/javascript" src="../displays/position/widget_positioner.js"></script>
-<!-- ../displays/statusbar sources -->
-<script type="text/javascript" src="../displays/statusbar/statusbar.js"></script>
-<script type="text/javascript" src="../displays/statusbar/fullscreen.js"></script>
-<script type="text/javascript" src="../displays/statusbar/gameinfo.js"></script>
-<script type="text/javascript" src="../displays/statusbar/info_window.js"></script>
-<!-- ../displays/svg sources -->
-<script type="text/javascript" src="../displays/svg/svg.js"></script>
-<script type="text/javascript" src="../displays/svg/pathutils.js"></script>
-<script type="text/javascript" src="../displays/svg/svgobj.js"></script>
-<!-- ../dom sources -->
-<script type="text/javascript" src="../dom/dom.js"></script>
-<script type="text/javascript" src="../dom/error.js"></script>
-<script type="text/javascript" src="../dom/sanitize.js"></script>
-<script type="text/javascript" src="../dom/ux.js"></script>
-<!-- ../flattener sources -->
-<script type="text/javascript" src="../flattener/flattener.js"></script>
-<script type="text/javascript" src="../flattener/board.js"></script>
-<script type="text/javascript" src="../flattener/flattened.js"></script>
-<script type="text/javascript" src="../flattener/intersection.js"></script>
-<script type="text/javascript" src="../flattener/labels.js"></script>
-<script type="text/javascript" src="../flattener/symbols.js"></script>
-<!-- ../markdown sources -->
-<script type="text/javascript" src="../markdown/markdown.js"></script>
-<script type="text/javascript" src="../markdown/marked.js"></script>
-<!-- ../orientation sources -->
-<script type="text/javascript" src="../orientation/orientation.js"></script>
-<script type="text/javascript" src="../orientation/bbox.js"></script>
-<script type="text/javascript" src="../orientation/cropbox.js"></script>
-<script type="text/javascript" src="../orientation/cropping.js"></script>
-<script type="text/javascript" src="../orientation/min_bbox.js"></script>
-<script type="text/javascript" src="../orientation/rotate.js"></script>
-<!-- ../parse sources -->
-<script type="text/javascript" src="../parse/parse.js"></script>
-<script type="text/javascript" src="../parse/sgf_parser.js"></script>
-<script type="text/javascript" src="../parse/tygem.js"></script>
-<!-- ../rules sources -->
-<script type="text/javascript" src="../rules/rules.js"></script>
-<script type="text/javascript" src="../rules/all_properties.js"></script>
-<script type="text/javascript" src="../rules/autonumber.js"></script>
-<script type="text/javascript" src="../rules/goban.js"></script>
-<script type="text/javascript" src="../rules/move.js"></script>
-<script type="text/javascript" src="../rules/movenode.js"></script>
-<script type="text/javascript" src="../rules/movetree.js"></script>
-<script type="text/javascript" src="../rules/problems.js"></script>
-<script type="text/javascript" src="../rules/properties.js"></script>
-<script type="text/javascript" src="../rules/treepath.js"></script>
-<!-- ../sgf sources -->
-<script type="text/javascript" src="../sgf/sgf.js"></script>
-<!-- ../themes sources -->
-<script type="text/javascript" src="../themes/themes.js"></script>
-<script type="text/javascript" src="../themes/base_theme.js"></script>
-<script type="text/javascript" src="../themes/classes.js"></script>
-<script type="text/javascript" src="../themes/colorful.js"></script>
-<script type="text/javascript" src="../themes/css_base_theme.js"></script>
-<script type="text/javascript" src="../themes/default.js"></script>
-<script type="text/javascript" src="../themes/depth.js"></script>
-<script type="text/javascript" src="../themes/moody.js"></script>
-<script type="text/javascript" src="../themes/textbook.js"></script>
-<script type="text/javascript" src="../themes/transparent.js"></script>
-<!-- ../widgets sources -->
-<script type="text/javascript" src="../widgets/widgets.js"></script>
-<script type="text/javascript" src="../widgets/base_widget.js"></script>
-<script type="text/javascript" src="../widgets/manager.js"></script>
-<!-- END-AUTO-GEN-DEPS -->
+    <!-- AUTO-GEN-DEPS -->
+    <!-- END-AUTO-GEN-DEPS -->
+  </head>
 
-<body>
-<!-- Create a div as a place holder just so we can create a Raphael paper. -->
-<div id="glift_display1">
-<script type="text/javascript">
+  <body>
+    <!-- Create a div as a place holder just so we can create a Raphael paper. -->
+    <div id="glift_display1">
+    <script type="text/javascript">
 
-(function() {
-  var paper = Raphael('glift_display1', 1000, 1000);
-  for (var key in glift.displays.icons.svg) {
-    var pathobj = paper.path(glift.displays.icons.svg[key].string);
-    var bbox = pathobj.getBBox();
-    console.log(key)
-    console.log(JSON.stringify(bbox));
-  };
-})();
-</script>
-</body>
+    (function() {
+      var paper = Raphael('glift_display1', 1000, 1000);
+      for (var key in glift.displays.icons.svg) {
+        var pathobj = paper.path(glift.displays.icons.svg[key].string);
+        var bbox = pathobj.getBBox();
+        console.log(key)
+        console.log(JSON.stringify(bbox));
+      };
+    })();
+    </script>
+  </body>
+</html>
